--- a/extremal_ICP.ipynb
+++ b/extremal_ICP.ipynb
@@ -105,8 +105,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6dc1299e-32f2-4850-9497-ed3e08347270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Now, we will fit a non complete linear regression model. We fit Y only on X_1\n",
+    "\n",
+    "###For environement r\n",
+    "regr = linear_model.LinearRegression()\n",
+    "reshaped_X1_r = X1_r.reshape(-1 , 1)\n",
+    "regr.fit(reshaped_X1_r , Y_r)\n",
+    "Y_r_hat =  (reshaped_X1_r * regr.coef_).sum(axis=1)\n",
+    "resid_r = Y_r - Y_r_hat\n",
+    "\n",
+    "\n",
+    "\n",
+    "###For environement f\n",
+    "reshaped_X1_f = X1_f.reshape(-1 , 1)\n",
+    "regr.fit(reshaped_X1_f , Y_f)\n",
+    "Y_f_hat =  (reshaped_X1_f * regr.coef_).sum(axis=1)\n",
+    "resid_f = Y_f - Y_f_hat\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "20057ce7-4e91-4d59-9227-19d81afa01a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of the statistic for the residuals of the two environements is given by  1.5036164125225016\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [resid_r , resid_f]\n",
+    "extr_tail_fraction = [0.95 , 0.95]\n",
+    "\n",
+    "value_stat = statistic_fun(data , extr_tail_fraction)\n",
+    "\n",
+    "print(\"The value of the statistic for the residuals of the two environements is given by \", value_stat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7891cf57-c8fc-45af-aca8-ca1a8eaf7f02",
    "metadata": {},
    "outputs": [],
    "source": []
